# CRUD_API

./: .env  Cargo.toml  diesel.toml
migrations/2023-07-11-104857_my_todos/: up.sql
src/: main.rs  model.rs  my_todos.rs  schema.rs
