[package]
name = "crud_API"
version = "0.1.0"
edition = "2021"


[dependencies]
rocket = "0.4.11"
rocket_codegen = "0.4.11"
rocket-multipart-form-data = "0.9.5"
diesel = { version = "1.4", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["handlebars_templates"]
